KRA-FUN-15 JIRA changes
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6217 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-contacts.html
+++ b/kra-awa-dev/aw-contacts.html
@@ -463,7 +463,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       
                       <tr>
                         <td colspan="2" style="padding:0px"><div class="floaters">
-                    <p>You have the option to add the unit details for a key person.</p> 
+                    <p>You have the option to Add the unit details for a key person.</p> 
                     <a href="#" id="a"><img src="../images/tinybutton-addunitdet.gif" alt="" width="101" height="15" border="0" id="a"></a> 
                   </div></td>
                       </tr>
