--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -27,7 +27,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
   <h1>Awards - Notes <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
       <tr>
         <th scope=row><div align=right>Document Id:</div></th>
         <td>291607</td>
@@ -98,7 +98,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
   </div>
 </div>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpAdding="0" cellspacing="0">
   <tr>
     <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
     <td><div  align="center">
@@ -106,7 +106,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 
 <!-- PANEL: Comments -->
 	<!-- Panel Tab Header -->
-        <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+        <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
                 <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Comments</td>
                 <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A301" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F301" ></a></span> </td>
@@ -132,7 +132,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 
 <!-- PANEL: Attachments -->
 	<!-- Panel Tab Header -->
-        <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+        <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
                 <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Attachments (3)</td>
                 <td class="tabtable2-mid"><a href="#" id="A1" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F1" vspace=6></a></td>
@@ -145,7 +145,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <div class="h2-container"> <span class="subhead-left">
               <h2> Attachments</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-awards-MR-Backup/final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </span> </div>
-            <table align="center" cellpadding="0" cellspacing="0"  summary=""  >
+            <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
               <tr>
                 <th>&nbsp;</th>
                 <th scope=col>Posted Timestamp</th>
@@ -163,12 +163,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <option value="A2">- Attachment 2</option>
                   </select></td>
                 <td height="30" nowrap class="infoline"><textarea name="prsn_base_slry2" cols="30" rows="3"></textarea>
-                  <a href="#"><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></a></td>
+                  <a href="#"><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></a></td>
                 <td class="infoline" height="30">&nbsp;
                   <label>
                   <input name="file" type="file" class="nobord" id="file name" size="12">
                   </label></td>
-                <td nowrap class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-add1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                <td nowrap class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-Add1.gif" alt="Add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
                 <th width="2%"  scope="row">1</th>
@@ -202,7 +202,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           
           
           <!-- Notes -->
-          <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+          <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Notes (2)</td>
               <td class="tabtable2-mid"><a href="#" id="A6" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F6" vspace=6></a> </td>
@@ -213,7 +213,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <div class="h2-container"> <span class="subhead-left">
               <h2>Notes</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-awards-MR-Backup/final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </span> </div>
-            <table cellpadding=0 cellspacing="0" summary="view/add notes">
+            <table cellpAdding=0 cellspacing="0" summary="view/Add notes">
               <tr>
                 <th scope=col>&nbsp;</th>
                 <th scope=col>Posted Timestamp</th>
@@ -230,9 +230,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td class="infoline">&nbsp;</td>
                 <td class="infoline"><input name="org_doc_nbr22" size=25 type=text alt="Description" id="note topic"></td>
                 <td height="30" nowrap class="infoline"><textarea name="prsn_base_slry" cols="30" rows="3"></textarea>
-                  <a href="#"><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></a></td>
+                  <a href="#"><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></a></td>
                 <td class="infoline"><div align=center>
-                    <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-add1.gif" alt="add">
+                    <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-Add1.gif" alt="Add">
                   </div></td>
               </tr>
               <tr>
@@ -253,7 +253,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
             </table>
           </div>
-          <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+          <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
             <tr>
               <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
               <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
