--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -142,7 +142,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50"> <div align="center">Actions</div></th>
                 </tr>
                 <tr>
-                  <th>add:</th>
+                  <th>Add:</th>
                   <td class="infoline"><div align="center">
                       <select name="select" id="select">
                         <option selected>select</option>
@@ -240,7 +240,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -364,7 +364,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -402,7 +402,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th> <div align="center">Actions</div></th>
                 </tr>
                 <tr>
-                  <th>add:</th>
+                  <th>Add:</th>
                   <td class="infoline"><div align="center">
                       <select name="select" id="select">
                         <option selected>select</option>
@@ -500,7 +500,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -624,7 +624,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -662,7 +662,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th> <div align="center">Actions</div></th>
                 </tr>
                 <tr>
-                  <th>add:</th>
+                  <th>Add:</th>
                   <td class="infoline"><div align="center">
                       <select name="select" id="select">
                         <option selected>select</option>
@@ -760,7 +760,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -884,7 +884,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -922,7 +922,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th> <div align="center">Actions</div></th>
                 </tr>
                 <tr>
-                  <th>add:</th>
+                  <th>Add:</th>
                   <td class="infoline"><div align="center">
                       <select name="select" id="select">
                         <option selected>select</option>
@@ -1020,7 +1020,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -1144,7 +1144,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -1182,7 +1182,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th> <div align="center">Actions</div></th>
                 </tr>
                 <tr>
-                  <th>add:</th>
+                  <th>Add:</th>
                   <td class="infoline"><div align="center">
                       <select name="select" id="select">
                         <option selected>select</option>
@@ -1280,7 +1280,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -1404,7 +1404,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <th width="50"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
-                          <th><div align="center">add:</div></th>
+                          <th><div align="center">Add:</div></th>
                           <td class="infoline"><div align="center">
                               <select name="select" id="select">
                                 <option selected>select</option>
@@ -1452,7 +1452,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1475,7 +1475,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1498,7 +1498,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" width="16" height="16">
                     <div align=center></div></td>
@@ -1556,7 +1556,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1579,7 +1579,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1602,7 +1602,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1625,7 +1625,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1648,7 +1648,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1671,7 +1671,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th width="50">Actions</th>
                 </tr>
                 <tr>
-                  <th><span class="infoline">add:</span></th>
+                  <th><span class="infoline">Add:</span></th>
                   <td class="infoline"><input type="text" name="textfield2" id="textfield2">
                     <img src="../images/searchicon.gif" alt="sdf" width="16" height="16">
                     <div align=center></div></td>
@@ -1740,7 +1740,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
-                  <th class="infoline" scope=row>totals</th>
+                  <th class="infoline" scope=row>Totals</th>
                   <td colspan="3" class="infoline">&nbsp;</td>
                   <td class="infoline"><div align="right"><strong> $25.73</strong></div></td>
                   <td class="infoline">&nbsp;</td>
@@ -1802,7 +1802,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
-                  <th scope=row>totals</th>
+                  <th scope=row>Totals</th>
                   <td colspan="4" class="infoline">&nbsp;</td>
                   <td class="infoline"><div align="right"><strong>$9079.68</strong></div></td>
                   <td class="infoline">&nbsp;</td>
