--- a/kra-awa-dev/aw-permissions.html
+++ b/kra-awa-dev/aw-permissions.html
@@ -27,7 +27,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
   <h1>Awards - Permissions <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
       <tr>
         <th scope=row><div align=right>Document Id:</div></th>
         <td>291607</td>
@@ -99,11 +99,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
   </div>
 </div>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpAdding="0" cellspacing="0">
   <tr>
     <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
     <td><div id="workarea">
-        <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+        <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
           <tr>
             <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Assigned Roles</td>
             <td class="tabtable1-mid"><a href="#" id="A1" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F1" vspace=6></a> </td>
@@ -117,7 +117,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="h2-container"> <span class="subhead-left">
             <h2>Assigned Roles</h2>
             </span><span class="subhead-right"> <img src="../images/tinybutton-viewrights.gif" alt="view rights" width="67" height="15" onClick="MM_openBrWindow('aw-permissions-viewrights.html','','scrollbars=yes,resizable=yes,width=800,height=600')"></span></div>
-          <table cellpadding=0 cellspacing="0"  summary="">
+          <table cellpAdding=0 cellspacing="0"  summary="">
             <tr>
               <th width="35%"><div align="right"> Award Budget Administrator: </div></th>
               <td align=left valign=middle ><span class="infocell">Beckford, Augustus O</span></td>
@@ -136,7 +136,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
         </div>
-        <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+        <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
           <tr>
             <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle"> Users </td>
             <td class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a> </td>
@@ -148,7 +148,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="h2-container">
             <h2><span class="subhead-left"> Users </span></h2>
             <span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-awards-MR-Backup/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </span> </div>
-          <table cellpadding=0 cellspacing="0"  summary="">
+          <table cellpAdding=0 cellspacing="0"  summary="">
             <tr>
               <th>&nbsp;</th>
               <th>*User Name </th>
@@ -175,7 +175,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <option>View Award</option>
                   <option>View Award Budget</option>
                 </select></td>
-              <td class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-add1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+              <td class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-Add1.gif" alt="Add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
             </tr>
             <tr>
               <th>1</th>
@@ -260,7 +260,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
         </div>
-        <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+        <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
           <tr>
             <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
             <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
