--- a/kra-awa-dev/aw-questions.html
+++ b/kra-awa-dev/aw-questions.html
@@ -26,7 +26,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
   <h1>Awards - Questions <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
         <tr>
           <th scope=row><div align=right>Document Id:</div></th>
           <td>291607</td>
@@ -95,11 +95,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
   </div>
 </div>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpAdding="0" cellspacing="0">
   <tr>
     <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
     <td><div id="workarea">
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="blank" width="12" height="29" align="absmiddle">General Questions asdf asdf asdf asdf asdf... </td>
           <td class="tabtable1-mid"><span class="tabtable2-mid"><a id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a></span> </td>
@@ -111,8 +111,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left">General Questions asdf asdf asdf asdf asdf... </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> General Questions asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf </div>
-        <table cellpadding=0 cellspacing="0" class="result-table" summary="">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> General Questions asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf </div>
+        <table cellpAdding=0 cellspacing="0" class="result-table" summary="">
           <tbody id="G5">
             <tr>
               <th width="3%">&nbsp;</th>
@@ -144,7 +144,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="adsf" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
@@ -168,7 +168,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal1.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription" disabled ></textarea>
-                <a href="#"><img src="../images/pencil_add1.png" alt="add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
+                <a href="#"><img src="../images/pencil_Add1.png" alt="Add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
             <tr>
@@ -186,7 +186,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal1.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription" disabled ></textarea>
-                <a href="#"><img src="../images/pencil_add1.png" alt="add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
+                <a href="#"><img src="../images/pencil_Add1.png" alt="Add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
             <tr>
@@ -210,7 +210,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
@@ -232,7 +232,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal1.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
@@ -254,13 +254,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription2" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription2" disabled ></textarea>
-                <a href="#"><img src="../images/pencil_add1.png" alt="add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
+                <a href="#"><img src="../images/pencil_Add1.png" alt="Add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
           </tbody>
         </table>
       </div>
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="blank" width="12" height="29" align="absmiddle" > Organization Verification Questions</td>
           <td class="tabtable2-mid"><a id="A12" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F12" ></a> </td>
@@ -271,8 +271,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left"> Organization Verification Questions </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> Organization Verification Questions</div>
-        <table cellpadding=0 cellspacing="0" class="result-table" summary="">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> Organization Verification Questions</div>
+        <table cellpAdding=0 cellspacing="0" class="result-table" summary="">
           <tbody id="G">
             <tr>
               <th width="3%">&nbsp;</th>
@@ -302,7 +302,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
@@ -324,7 +324,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
@@ -349,14 +349,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea>
-                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea">
               </div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
           </tbody>
         </table>
       </div>
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="blank" width="12" height="29" align="absmiddle" > Financial </td>
           <td class="tabtable2-mid"><a id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" ></a> </td>
@@ -367,8 +367,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left">Financial Entity Questions </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> Financial Entity Questions </div>
-        <table cellpadding=0 cellspacing="0" class="result-table" summary="">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> Financial Entity Questions </div>
+        <table cellpAdding=0 cellspacing="0" class="result-table" summary="">
           <tbody id="G2">
             <tr>
               <th width="3%">&nbsp;</th>
@@ -397,7 +397,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal1.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription" disabled ></textarea>
-                <a href="#"><img src="../images/pencil_add1.png" alt="add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
+                <a href="#"><img src="../images/pencil_Add1.png" alt="Add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
             <tr>
@@ -421,13 +421,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><img src="../images/cal1.gif" alt="blank" width="16" height="16"></div></td>
               <td nowrap><div align="center">
                 <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription" disabled ></textarea>
-                <a href="#"><img src="../images/pencil_add1.png" alt="add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
+                <a href="#"><img src="../images/pencil_Add1.png" alt="Add" width=16 height=16 hspace=3 vspace=3 border=0 onClick="MM_openBrWindow('../global/expandedtext.html','','scrollbars=yes,resizable=yes,width=700,height=300')"></a></div></td>
               <td nowrap><div align="center"><img src="../images/tinybutton-details.gif" alt="details" width="47" height="15"></div></td>
             </tr>
           </tbody>
         </table>
       </div>
-      <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+      <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
         <tr>
           <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
           <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
