--- a/kra-awa-dev/aw-specialreview.html
+++ b/kra-awa-dev/aw-specialreview.html
@@ -26,7 +26,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
   <h1>Awards - Special Review <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
         <tr>
           <th scope=row><div align=right>Document Id:</div></th>
           <td>291607</td>
@@ -94,12 +94,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       </div>
     </div>
     </div>
-  <table width="100%" cellpadding="0" cellspacing="0">
+  <table width="100%" cellpAdding="0" cellspacing="0">
     <tr>
       <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
       <td><div  align="center">
           <div id="workarea">
-            <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+            <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
               <tr>
                 <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle"> Special Review </td>
                 <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, true)"></td>
@@ -112,7 +112,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <div class="h2-container"><span class="subhead-left">
                 <h2>Special Review</h2>
               </span> <span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-              <table cellpadding=0 cellspacing="0"  summary="">
+              <table cellpAdding=0 cellspacing="0"  summary="">
                 <tr>
                   <th>&nbsp;</th>
                   <th> <div align="center"><label for="type">*Type</label></div></th>
@@ -126,7 +126,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th >Actions</th>
                 </tr>
                 <tr>
-                  <th nowrap scope="row">add:</th>
+                  <th nowrap scope="row">Add:</th>
                   <td nowrap class="infoline"><div align="center">
                       <select name="specialReviewCode" onchange="dataChanged()" style="width:150px" id="type">
                         <option value="" selected="selected">select:</option>
@@ -176,8 +176,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </div></td>
                   <td nowrap class="infoline"><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
-                  <td class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-add1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
+                  <td class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-Add1.gif" alt="Add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
                   <th scope="row"><div align="center">1</div></th>
@@ -232,7 +232,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </span></div></td>
                   <td nowrap><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
                   <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
@@ -288,7 +288,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </span></div></td>
                   <td nowrap><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
                   <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
@@ -342,7 +342,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </span></div></td>
                   <td nowrap><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
                   <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
@@ -396,7 +396,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </span></div></td>
                   <td nowrap><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
                   <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
                 <tr>
@@ -450,12 +450,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </select>
                   </span></div></td>
                   <td nowrap><div align="center">
-                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></div></td>
+                      <textarea name="newPurchasingItemLine.itemDescription" tabindex="0" cols="20" rows="3" id="newPurchasingItemLine.itemDescription"></textarea><input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_Add.png" alt="expand textarea"></div></td>
                   <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
                 </tr>
               </table>
             </div>
-            <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+            <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
               <tr>
                 <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
                 <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
