--- a/kra-awa-dev/aw-customdata.html
+++ b/kra-awa-dev/aw-customdata.html
@@ -27,7 +27,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
   <h1>Awards - Custom Data <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
       <tr>
         <th scope=row><div align=right>Document Id:</div></th>
         <td>291607</td>
@@ -98,11 +98,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
   </div>
 </div>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpAdding="0" cellspacing="0">
   <tr>
     <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
     <td><div id="workarea">
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Budget asdf asdf asdf asdf asdf   asdf asdf asdf... </td>
           <td class="tabtable1-mid"><span class="tabtable2-mid"><a id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a></span> </td>
@@ -114,8 +114,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left"> Budget asdf asdf asdf asdf asdf   asdf asdf asdf... </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf </div>
-        <table cellpadding=0 cellspacing="0" class="result-table">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf asdf </div>
+        <table cellpAdding=0 cellspacing="0" class="result-table">
           <tr class="datatable">
             <th  align="right"><label for="billing element">* Billing Element:</label></th>
             <td ><label for="textfield"></label>
@@ -131,7 +131,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </tr>
         </table>
       </div>
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" > Personnel Items for Review</td>
           <td class="tabtable2-mid"><a id="A12" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F12" ></a> </td>
@@ -142,8 +142,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left"> Personnel Items for Review </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> Personnel Items for Review </div>
-        <table cellpadding=0 cellspacing="0" class="result-table">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> Personnel Items for Review </div>
+        <table cellpAdding=0 cellspacing="0" class="result-table">
           <tr class="datatable">
             <th  align="right"><label for="graduate student count"> * Graduate Student Count:</label></th>
             <td ><label for="label2"></label>
@@ -156,7 +156,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </tr>
         </table>
       </div>
-      <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+      <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
         <tr>
           <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" > Project Details </td>
           <td class="tabtable2-mid"><a id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" ></a> </td>
@@ -167,8 +167,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="h2-container">
           <h2><span class="subhead-left">Project Details </span></h2>
           <span class="subhead-right"> <span class="subhead"><a href="../kra-coeus-awards-MR-Backup/asdf.html"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"></a></span> </span> </div>
-        <div align="left" style="padding:12px;"><strong> Full Group Name:</strong> Project Details </div>
-        <table cellpadding=0 cellspacing="0" class="result-table">
+        <div align="left" style="pAdding:12px;"><strong> Full Group Name:</strong> Project Details </div>
+        <table cellpAdding=0 cellspacing="0" class="result-table">
           <tr class="datatable">
             <th  align="right"><label for="export controls">Export Controls:</label></th>
             <td ><label for="label"></label>
@@ -181,7 +181,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </tr>
         </table>
       </div>
-      <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
+      <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
         <tr>
           <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
           <td align="right" class="footer-right"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="br3"></td>
