--- a/BFN/page-template.html
+++ b/BFN/page-template.html
@@ -100,25 +100,25 @@
 
 <!-- PAGE HEADER -->
 <div class="headerarea-kra" id="headerarea">
-    <h1>[Page Title Here] <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+    <h1>Budget <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <div class="headerbox">
         <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
             <tr>
-                <th scope=row><div align=right>Document Id:</div></th>
-                <td>291607</td>
+                <th scope=row><div align=right>Doc Nbr:</div></th>
+                <td>2585</td>
                 <th scope=row><div align=right>Status:</div></th>
-                <td>new</td>
+                <td>SAVED</td>
             </tr>
             <tr>
                 <th scope=row><div align=right>Initiator:</div></th>
-                <td>&lt;user name&gt;</td>
-                <th scope=row><div align=right>Last Updated:</div></th>
+                <td>quickstart</td>
+                <th scope=row><div align=right>Created:</div></th>
                 <td>10:06 AM 03/30/2005</td>
             </tr>
             <tr>
-                <th class="bord-l" scope=row><div align=right>Award Name:</div></th>
-                <td class="datacell-l">Award A</td>
-                <th class="bord-l" scope=row><div align=right>Version:</div></th>
+                <th class="bord-l" scope=row><div align=right>Budget Name:</div></th>
+                <td class="datacell-l">One</td>
+                <th class="bord-l" scope=row><div align=right>Version #:</div></th>
                 <td class="datacell-l">1</td>
             </tr>
         </table>
